syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.retail.provider.grpc";

import "google/protobuf/timestamp.proto";

package product_price;

service ProductPriceService {

  rpc GetProductPrice (ProductPriceRequest) returns (ProductPriceResponse) {}
}

message ProductPriceRequest {
  int32 brand_id = 1;
  int32 product_id = 2;
  google.protobuf.Timestamp date = 3;
}

message ProductPriceResponse {
  int32 product_id = 1;
  int32 brand_id = 2;
  int32 price_list = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  double price = 6;
}